generated/CParser.js
// Generated from J:/tec/compi/Nueva carpeta\CParser.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var CParserVisitor = require('./CParserVisitor').CParserVisitor;

var grammarFileName = "CParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, "'if'", "'else'", "'while'", "'return'", 
                     "'break'", "'class'", "'const'", "'new'", "'read'", 
                     "'void'", "'write'", "'for'", "'foreach'", "'in'", 
                     "'char'", "'int'", "'float'", "'bool'", "'string'", 
                     "','", "'='", "'('", "')'", "'+'", "'*'", "'['", "']'", 
                     "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", "'/'", 
                     "'-'", "'%'", "'&&'", "'||'", "'++'", "'--'", "';'", 
                     "'{'", "'}'", "'.'", "'true'", "'false'" ];

var symbolicNames = [ null, "INDENT", "DEDENT", "IF", "ELSE", "WHILE", "RETURN", 
                      "BRAKE", "CLASS", "CONST", "NEW", "READ", "VOID", 
                      "WRITE", "FOR", "FOREACH", "IN", "CHARR", "INT", "FLOAT", 
                      "BOOL", "STRINGR", "COMA", "ASIGN", "PIZQ", "PDER", 
                      "SUMA", "MUL", "PCIZQ", "PCDER", "MENOR", "MAYOR", 
                      "MENORIGUAL", "MAYORIGUAL", "COMPARACION", "DIFERENTE", 
                      "DIV", "RESTA", "MODULO", "AND", "OR", "AUMENTO", 
                      "DISMINUCION", "PUNTOCOMA", "CORCHETEIZQ", "CORCHETEDER", 
                      "PUNTO", "TRUE", "FALSE", "IDENTIFIER", "NUMBER", 
                      "STRING", "CHAR", "COMENTARIO_LINEA", "SPECIAL_COMMENT", 
                      "WS" ];

var ruleNames =  [ "program", "declarations", "constDecl", "numStr", "varDecl", 
                   "classDecl", "methodDecl", "tipoMet", "formPars", "type", 
                   "statement", "asignation", "block", "actPars", "condition", 
                   "condTerm", "condFact", "expr", "term", "factor", "booleano", 
                   "asigClass", "relop", "addop", "mulop" ];

function CParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CParser.prototype = Object.create(antlr4.Parser.prototype);
CParser.prototype.constructor = CParser;

Object.defineProperty(CParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CParser.EOF = antlr4.Token.EOF;
CParser.INDENT = 1;
CParser.DEDENT = 2;
CParser.IF = 3;
CParser.ELSE = 4;
CParser.WHILE = 5;
CParser.RETURN = 6;
CParser.BRAKE = 7;
CParser.CLASS = 8;
CParser.CONST = 9;
CParser.NEW = 10;
CParser.READ = 11;
CParser.VOID = 12;
CParser.WRITE = 13;
CParser.FOR = 14;
CParser.FOREACH = 15;
CParser.IN = 16;
CParser.CHARR = 17;
CParser.INT = 18;
CParser.FLOAT = 19;
CParser.BOOL = 20;
CParser.STRINGR = 21;
CParser.COMA = 22;
CParser.ASIGN = 23;
CParser.PIZQ = 24;
CParser.PDER = 25;
CParser.SUMA = 26;
CParser.MUL = 27;
CParser.PCIZQ = 28;
CParser.PCDER = 29;
CParser.MENOR = 30;
CParser.MAYOR = 31;
CParser.MENORIGUAL = 32;
CParser.MAYORIGUAL = 33;
CParser.COMPARACION = 34;
CParser.DIFERENTE = 35;
CParser.DIV = 36;
CParser.RESTA = 37;
CParser.MODULO = 38;
CParser.AND = 39;
CParser.OR = 40;
CParser.AUMENTO = 41;
CParser.DISMINUCION = 42;
CParser.PUNTOCOMA = 43;
CParser.CORCHETEIZQ = 44;
CParser.CORCHETEDER = 45;
CParser.PUNTO = 46;
CParser.TRUE = 47;
CParser.FALSE = 48;
CParser.IDENTIFIER = 49;
CParser.NUMBER = 50;
CParser.STRING = 51;
CParser.CHAR = 52;
CParser.COMENTARIO_LINEA = 53;
CParser.SPECIAL_COMMENT = 54;
CParser.WS = 55;

CParser.RULE_program = 0;
CParser.RULE_declarations = 1;
CParser.RULE_constDecl = 2;
CParser.RULE_numStr = 3;
CParser.RULE_varDecl = 4;
CParser.RULE_classDecl = 5;
CParser.RULE_methodDecl = 6;
CParser.RULE_tipoMet = 7;
CParser.RULE_formPars = 8;
CParser.RULE_type = 9;
CParser.RULE_statement = 10;
CParser.RULE_asignation = 11;
CParser.RULE_block = 12;
CParser.RULE_actPars = 13;
CParser.RULE_condition = 14;
CParser.RULE_condTerm = 15;
CParser.RULE_condFact = 16;
CParser.RULE_expr = 17;
CParser.RULE_term = 18;
CParser.RULE_factor = 19;
CParser.RULE_booleano = 20;
CParser.RULE_asigClass = 21;
CParser.RULE_relop = 22;
CParser.RULE_addop = 23;
CParser.RULE_mulop = 24;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;


 
ProgramContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ProgramDefContext(parser, ctx) {
	ProgramContext.call(this, parser);
    ProgramContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ProgramDefContext.prototype = Object.create(ProgramContext.prototype);
ProgramDefContext.prototype.constructor = ProgramDefContext;

CParser.ProgramDefContext = ProgramDefContext;

ProgramDefContext.prototype.CLASS = function() {
    return this.getToken(CParser.CLASS, 0);
};

ProgramDefContext.prototype.IDENTIFIER = function() {
    return this.getToken(CParser.IDENTIFIER, 0);
};

ProgramDefContext.prototype.CORCHETEIZQ = function() {
    return this.getToken(CParser.CORCHETEIZQ, 0);
};

ProgramDefContext.prototype.CORCHETEDER = function() {
    return this.getToken(CParser.CORCHETEDER, 0);
};

ProgramDefContext.prototype.EOF = function() {
    return this.getToken(CParser.EOF, 0);
};

ProgramDefContext.prototype.declarations = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DeclarationsContext);
    } else {
        return this.getTypedRuleContext(DeclarationsContext,i);
    }
};

ProgramDefContext.prototype.methodDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(MethodDeclContext);
    } else {
        return this.getTypedRuleContext(MethodDeclContext,i);
    }
};
ProgramDefContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitProgramDef(this);
    } else {
        return visitor.visitChildren(this);
    }
};



CParser.ProgramContext = ProgramContext;

CParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CParser.RULE_program);
    var _la = 0; // Token type
    try {
        localctx = new ProgramDefContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 50;
        this.match(CParser.CLASS);
        this.state = 51;
        this.match(CParser.IDENTIFIER);
        this.state = 55;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CParser.CLASS) | (1 << CParser.CONST) | (1 << CParser.CHARR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.BOOL) | (1 << CParser.STRINGR))) !== 0) || _la===CParser.IDENTIFIER) {
            this.state = 52;
            this.declarations();
            this.state = 57;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 58;
        this.match(CParser.CORCHETEIZQ);
        this.state = 62;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CParser.VOID) | (1 << CParser.CHARR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.BOOL) | (1 << CParser.STRINGR))) !== 0) || _la===CParser.IDENTIFIER) {
            this.state = 59;
            this.methodDecl();
            this.state = 64;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 65;
        this.match(CParser.CORCHETEDER);
        this.state = 66;
        this.match(CParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DeclarationsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CParser.RULE_declarations;
    return this;
}

DeclarationsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DeclarationsContext.prototype.constructor = DeclarationsContext;


 
DeclarationsContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function DeclaracionVariableContext(parser, ctx) {
	DeclarationsContext.call(this, parser);
    DeclarationsContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DeclaracionVariableContext.prototype = Object.create(DeclarationsContext.prototype);
DeclaracionVariableContext.prototype.constructor = DeclaracionVariableContext;

CParser.DeclaracionVariableContext = DeclaracionVariableContext;

DeclaracionVariableContext.prototype.varDecl = function() {
    return this.getTypedRuleContext(VarDeclContext,0);
};
DeclaracionVariableContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitDeclaracionVariable(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function DeclaracionConstContext(parser, ctx) {
	DeclarationsContext.call(this, parser);
    DeclarationsContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DeclaracionConstContext.prototype = Object.create(DeclarationsContext.prototype);
DeclaracionConstContext.prototype.constructor = DeclaracionConstContext;

CParser.DeclaracionConstContext = DeclaracionConstContext;

DeclaracionConstContext.prototype.constDecl = function() {
    return this.getTypedRuleContext(ConstDeclContext,0);
};
DeclaracionConstContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitDeclaracionConst(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function DeclaracionClaseContext(parser, ctx) {
	DeclarationsContext.call(this, parser);
    DeclarationsContext.prototype.copyFrom.call(this, ctx);
    return this;
}

DeclaracionClaseContext.prototype = Object.create(DeclarationsContext.prototype);
DeclaracionClaseContext.prototype.constructor = DeclaracionClaseContext;

CParser.DeclaracionClaseContext = DeclaracionClaseContext;

DeclaracionClaseContext.prototype.classDecl = function() {
    return this.getTypedRuleContext(ClassDeclContext,0);
};
DeclaracionClaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitDeclaracionClase(this);
    } else {
        return visitor.visitChildren(this);
    }
};



CParser.DeclarationsContext = DeclarationsContext;

CParser.prototype.declarations = function() {

    var localctx = new DeclarationsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CParser.RULE_declarations);
    try {
        this.state = 71;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case CParser.CONST:
            localctx = new DeclaracionConstContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 68;
            this.constDecl();
            break;
        case CParser.CHARR:
        case CParser.INT:
        case CParser.FLOAT:
        case CParser.BOOL:
        case CParser.STRINGR:
        case CParser.IDENTIFIER:
            localctx = new DeclaracionVariableContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 69;
            this.varDecl();
            break;
        case CParser.CLASS:
            localctx = new DeclaracionClaseContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 70;
            this.classDecl();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ConstDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CParser.RULE_constDecl;
    return this;
}

ConstDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ConstDeclContext.prototype.constructor = ConstDeclContext;


 
ConstDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ConstanteContext(parser, ctx) {
	ConstDeclContext.call(this, parser);
    ConstDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ConstanteContext.prototype = Object.create(ConstDeclContext.prototype);
ConstanteContext.prototype.constructor = ConstanteContext;

CParser.ConstanteContext = ConstanteContext;

ConstanteContext.prototype.CONST = function() {
    return this.getToken(CParser.CONST, 0);
};

ConstanteContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

ConstanteContext.prototype.IDENTIFIER = function() {
    return this.getToken(CParser.IDENTIFIER, 0);
};

ConstanteContext.prototype.ASIGN = function() {
    return this.getToken(CParser.ASIGN, 0);
};

ConstanteContext.prototype.numStr = function() {
    return this.getTypedRuleContext(NumStrContext,0);
};

ConstanteContext.prototype.PUNTOCOMA = function() {
    return this.getToken(CParser.PUNTOCOMA, 0);
};
ConstanteContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitConstante(this);
    } else {
        return visitor.visitChildren(this);
    }
};



CParser.ConstDeclContext = ConstDeclContext;

CParser.prototype.constDecl = function() {

    var localctx = new ConstDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CParser.RULE_constDecl);
    try {
        localctx = new ConstanteContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 73;
        this.match(CParser.CONST);
        this.state = 74;
        this.type();
        this.state = 75;
        this.match(CParser.IDENTIFIER);
        this.state = 76;
        this.match(CParser.ASIGN);
        this.state = 77;
        this.numStr();
        this.state = 78;
        this.match(CParser.PUNTOCOMA);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NumStrContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CParser.RULE_numStr;
    return this;
}

NumStrContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NumStrContext.prototype.constructor = NumStrContext;


 
NumStrContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function NumeroContext(parser, ctx) {
	NumStrContext.call(this, parser);
    NumStrContext.prototype.copyFrom.call(this, ctx);
    return this;
}

NumeroContext.prototype = Object.create(NumStrContext.prototype);
NumeroContext.prototype.constructor = NumeroContext;

CParser.NumeroContext = NumeroContext;

NumeroContext.prototype.NUMBER = function() {
    return this.getToken(CParser.NUMBER, 0);
};
NumeroContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitNumero(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function CharContext(parser, ctx) {
	NumStrContext.call(this, parser);
    NumStrContext.prototype.copyFrom.call(this, ctx);
    return this;
}

CharContext.prototype = Object.create(NumStrContext.prototype);
CharContext.prototype.constructor = CharContext;

CParser.CharContext = CharContext;

CharContext.prototype.CHAR = function() {
    return this.getToken(CParser.CHAR, 0);
};
CharContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitChar(this);
    } else {
        return visitor.visitChildren(this);
    }
};



CParser.NumStrContext = NumStrContext;

CParser.prototype.numStr = function() {

    var localctx = new NumStrContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CParser.RULE_numStr);
    try {
        this.state = 82;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case CParser.NUMBER:
            localctx = new NumeroContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 80;
            this.match(CParser.NUMBER);
            break;
        case CParser.CHAR:
            localctx = new CharContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 81;
            this.match(CParser.CHAR);
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VarDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CParser.RULE_varDecl;
    return this;
}

VarDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarDeclContext.prototype.constructor = VarDeclContext;


 
VarDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function VariableContext(parser, ctx) {
	VarDeclContext.call(this, parser);
    VarDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

VariableContext.prototype = Object.create(VarDeclContext.prototype);
VariableContext.prototype.constructor = VariableContext;

CParser.VariableContext = VariableContext;

VariableContext.prototype.type = function() {
    return this.getTypedRuleContext(TypeContext,0);
};

VariableContext.prototype.IDENTIFIER = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(CParser.IDENTIFIER);
    } else {
        return this.getToken(CParser.IDENTIFIER, i);
    }
};


VariableContext.prototype.PUNTOCOMA = function() {
    return this.getToken(CParser.PUNTOCOMA, 0);
};

VariableContext.prototype.COMA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(CParser.COMA);
    } else {
        return this.getToken(CParser.COMA, i);
    }
};

VariableContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitVariable(this);
    } else {
        return visitor.visitChildren(this);
    }
};



CParser.VarDeclContext = VarDeclContext;

CParser.prototype.varDecl = function() {

    var localctx = new VarDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, CParser.RULE_varDecl);
    var _la = 0; // Token type
    try {
        localctx = new VariableContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.type();
        this.state = 85;
        this.match(CParser.IDENTIFIER);
        this.state = 90;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===CParser.COMA) {
            this.state = 86;
            this.match(CParser.COMA);
            this.state = 87;
            this.match(CParser.IDENTIFIER);
            this.state = 92;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 93;
        this.match(CParser.PUNTOCOMA);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function ClassDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CParser.RULE_classDecl;
    return this;
}

ClassDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ClassDeclContext.prototype.constructor = ClassDeclContext;


 
ClassDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function ClaseContext(parser, ctx) {
	ClassDeclContext.call(this, parser);
    ClassDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

ClaseContext.prototype = Object.create(ClassDeclContext.prototype);
ClaseContext.prototype.constructor = ClaseContext;

CParser.ClaseContext = ClaseContext;

ClaseContext.prototype.CLASS = function() {
    return this.getToken(CParser.CLASS, 0);
};

ClaseContext.prototype.IDENTIFIER = function() {
    return this.getToken(CParser.IDENTIFIER, 0);
};

ClaseContext.prototype.CORCHETEIZQ = function() {
    return this.getToken(CParser.CORCHETEIZQ, 0);
};

ClaseContext.prototype.CORCHETEDER = function() {
    return this.getToken(CParser.CORCHETEDER, 0);
};

ClaseContext.prototype.varDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDeclContext);
    } else {
        return this.getTypedRuleContext(VarDeclContext,i);
    }
};
ClaseContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitClase(this);
    } else {
        return visitor.visitChildren(this);
    }
};



CParser.ClassDeclContext = ClassDeclContext;

CParser.prototype.classDecl = function() {

    var localctx = new ClassDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, CParser.RULE_classDecl);
    var _la = 0; // Token type
    try {
        localctx = new ClaseContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 95;
        this.match(CParser.CLASS);
        this.state = 96;
        this.match(CParser.IDENTIFIER);
        this.state = 97;
        this.match(CParser.CORCHETEIZQ);
        this.state = 101;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CParser.CHARR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.BOOL) | (1 << CParser.STRINGR))) !== 0) || _la===CParser.IDENTIFIER) {
            this.state = 98;
            this.varDecl();
            this.state = 103;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 104;
        this.match(CParser.CORCHETEDER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function MethodDeclContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CParser.RULE_methodDecl;
    return this;
}

MethodDeclContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
MethodDeclContext.prototype.constructor = MethodDeclContext;


 
MethodDeclContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function MetodoContext(parser, ctx) {
	MethodDeclContext.call(this, parser);
    MethodDeclContext.prototype.copyFrom.call(this, ctx);
    return this;
}

MetodoContext.prototype = Object.create(MethodDeclContext.prototype);
MetodoContext.prototype.constructor = MetodoContext;

CParser.MetodoContext = MetodoContext;

MetodoContext.prototype.tipoMet = function() {
    return this.getTypedRuleContext(TipoMetContext,0);
};

MetodoContext.prototype.IDENTIFIER = function() {
    return this.getToken(CParser.IDENTIFIER, 0);
};

MetodoContext.prototype.PIZQ = function() {
    return this.getToken(CParser.PIZQ, 0);
};

MetodoContext.prototype.PDER = function() {
    return this.getToken(CParser.PDER, 0);
};

MetodoContext.prototype.block = function() {
    return this.getTypedRuleContext(BlockContext,0);
};

MetodoContext.prototype.formPars = function() {
    return this.getTypedRuleContext(FormParsContext,0);
};

MetodoContext.prototype.varDecl = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VarDeclContext);
    } else {
        return this.getTypedRuleContext(VarDeclContext,i);
    }
};
MetodoContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CParserVisitor ) {
        return visitor.visitMetodo(this);
    } else {
        return visitor.visitChildren(this);
    }
};



CParser.MethodDeclContext = MethodDeclContext;

CParser.prototype.methodDecl = function() {

    var localctx = new MethodDeclContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, CParser.RULE_methodDecl);
    var _la = 0; // Token type
    try {
        localctx = new MetodoContext(this, localctx);
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        this.tipoMet();
        this.state = 107;
        this.match(CParser.IDENTIFIER);
        this.state = 108;
        this.match(CParser.PIZQ);
        this.state = 110;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CParser.CHARR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.BOOL) | (1 << CParser.STRINGR))) !== 0) || _la===CParser.IDENTIFIER) {
            this.state = 109;
            this.formPars();
        }

        this.state = 112;
        this.match(CParser.PDER);
        this.state = 116;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CParser.CHARR) | (1 << CParser.INT) | (1 << CParser.FLOAT) | (1 << CParser.BOOL) | (1 << CParser.STRINGR))) !== 0) || _la===CParser.IDENTIFIER) {
            this.state = 113;
            this.varDecl();
            this.state = 118;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 119;
        this.block();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};
